--- a/pom.xml
+++ b/pom.xml
@@ -5,13 +5,13 @@
     <parent>
         <groupId>org.sonatype.oss</groupId>
         <artifactId>oss-parent</artifactId>
-        <version>7</version>
+        <version>9</version>
     </parent>
 
     <packaging>jar</packaging>
     <groupId>org.webjars</groupId>
     <artifactId>stacktrace</artifactId>
-    <version>0.5.1-SNAPSHOT</version>
+    <version>0.6.0-SNAPSHOT</version>
     <name>stacktrace.js</name>
     <description>WebJar for stacktrace.js</description>
     <url>http://webjars.org</url>
@@ -28,7 +28,7 @@
         <url>http://github.com/webjars/stacktrace</url>
         <connection>scm:git:https://github.com/webjars/stacktrace.git</connection>
         <developerConnection>scm:git:https://github.com/webjars/stacktrace.git</developerConnection>
-        <tag>stacktrace-0.5.0</tag>
+        <tag>stacktrace-0.6.0</tag>
     </scm>
 
     <developers>
@@ -37,11 +37,16 @@
             <name>James Ward</name>
             <email>james@jamesward.org</email>
         </developer>
+        <developer>
+            <id>cowwoc</id>
+            <name>Gili Tzabari</name>
+            <email>cowwoc@bbs.darktech.org</email>
+        </developer>
     </developers>
 
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-        <upstreamVersion>0.5.0</upstreamVersion>
+        <upstreamVersion>0.6.0</upstreamVersion>
         <upstream.url>https://raw.github.com/eriwen/javascript-stacktrace/v${upstreamVersion}</upstream.url>
         <destDir>${project.build.outputDirectory}/META-INF/resources/webjars/${project.artifactId}/${upstreamVersion}</destDir>
     </properties>
@@ -70,7 +75,7 @@
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-release-plugin</artifactId>
-                <version>2.4.1</version>
+                <version>2.5</version>
             </plugin>
         </plugins>
     </build>
